change toggle class

--- a/inst/src/Leaflet.Control.Opacity/L.Control.Opacity.css
+++ b/inst/src/Leaflet.Control.Opacity/L.Control.Opacity.css
@@ -35,3 +35,15 @@ input[type="range"]::-ms-thumb {
 .leaflet-control-layers-label {
     margin: 0px 0px 8px 1px
 }
+
+/*
+.leaflet-control-layers-toggle-opacity {
+    background-image: url(images/layers.png);
+    width: 36px;
+    height: 36px;
+}
+.leaflet-retina .leaflet-control-layers-toggle-opacity {
+    background-image: url(images/layers-2x.png);
+    background-size: 26px 26px;
+}
+*/
